Corrected project view text overlap issue

--- a/static/static/css/project.css
+++ b/static/static/css/project.css
@@ -3,7 +3,6 @@
     box-sizing: border-box;
     color: rgb(102, 102, 102);
     cursor: text;
-    height: 43.3333358764648px;
     overflow-wrap: break-word;
     text-align: center;
     width: 1140px;
@@ -18,7 +17,6 @@
 .project-title {
     box-sizing: border-box;
     cursor: text;
-    height: 57.7777786254883px;
     overflow-wrap: break-word;
     text-align: center;
     width: 1120px;
